threadx_test/evaluation/build/evaluation_files/home/klee/klee_test/threadx_test/evaluation/evaluation_files/thread_wait_abort/test000007.kquery
array _tx_thread_current_ptr[8] : w32 -> w8 = symbolic
array lazy_alloc1[432] : w32 -> w8 = symbolic
array lazy_alloc3[432] : w32 -> w8 = symbolic
array lazy_alloc5[2312] : w32 -> w8 = symbolic
array thread_ptr[8] : w32 -> w8 = symbolic
(query [(Eq 94722905082944
             (ReadLSB w64 0 _tx_thread_current_ptr))
         (Eq 94722904934912
             (ReadLSB w64 264 lazy_alloc3))
         (Eq 0
             (And w64 (ReadLSB w64 24 lazy_alloc5)
                      2))
         (Eq 94722905082496
             (ReadLSB w64 0 thread_ptr))
         (Eq 1414025796
             (ReadLSB w64 0 lazy_alloc1))
         (Eq false
             (Ult N0:(ReadLSB w32 92 lazy_alloc1)
                  4))
         (Eq false (Eq 4 N0))
         (Eq 0
             (ReadLSB w64 184 lazy_alloc1))
         (Eq 0
             (ReadLSB w32 100 lazy_alloc1))
         (Eq 0
             (ReadLSB w32 96 lazy_alloc1))
         (Ule 64
              (ZExt w64 (ReadLSB w32 88 lazy_alloc1)))]
        false)
